<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/banner_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/distance_15dp"
        android:layout_marginRight="@dimen/distance_15dp"
        android:layout_marginTop="@dimen/distance_30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_login_account"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/textsize_16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/mine_et_login_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_15dp"
            android:background="@null"
            android:hint="@string/mine_login_account_hint"
            android:singleLine="true"

            android:textColor="@color/color_333333"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/textsize_14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/distance_10dp"
            android:background="@color/grey_line" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_13dp"
            android:text="@string/mine_login_psw"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/textsize_16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/mine_et_login_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_15dp"
            android:background="@null"
            android:hint="@string/mine_login_psw_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/textsize_14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/distance_10dp"
            android:background="@color/grey_line" />
    </LinearLayout>

    <Button
        android:id="@+id/mine_btn_login"
        android:layout_width="@dimen/width_120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/distance_30dp"
        android:background="@drawable/shape_circle_cornrer_bg_orange"
        android:text="@string/mine_login_btn"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_16sp" />

</LinearLayout>