<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_circle_corner_bg_white"
    android:padding="@dimen/distance_18dp">

    <TextView
        android:id="@+id/approval_hint_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/approval_refuse_issuse_hint"
        android:textColor="@color/textcolor"
        android:textSize="@dimen/font_size_18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/approval_refuse_issue_et_suggestion"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_135dp"
        android:layout_below="@+id/approval_hint_1"
        android:layout_marginTop="@dimen/distance_5dp"
        android:background="@drawable/shape_edit_text_border"
        android:gravity="top|left"
        android:hint="@string/approval_refuse_issuse_hint2"
        android:padding="@dimen/distance_5dp"
        android:textColor="@color/textcolor"
        android:textSize="@dimen/textsize_16sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/approval_refuse_issue_et_suggestion"
        android:layout_marginTop="@dimen/distance_25dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/approval_refuse_issue_btn_cancle"
                android:layout_width="@dimen/width_100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_circle_corner_btn_white"
                android:text="@string/approval_refuse_issuse_cancel"
                android:textColor="@color/light_blue_new"
                android:textSize="@dimen/font_size_18sp" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/approval_refuse_issue_btn_confirm"
                android:layout_width="@dimen/width_100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_circle_corner_btn_blue"
                android:text="@string/approval_refuse_issuse_confirm"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_18sp" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>