<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/head_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_meeting_my_sponsor"
            android:layout_width="match_parent"
            android:layout_height="@dimen/distance_45dp"
            android:layout_marginLeft="@dimen/distance_10dp"
            android:layout_marginRight="@dimen/distance_5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_circle_cornrer_blue"
            android:gravity="center"
            android:text="@string/meeting_my_sponsor"
            android:textColor="@color/light_blue_new"
            android:textSize="@dimen/font_size_18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_meeting_my_check"
            android:layout_width="match_parent"
            android:layout_height="@dimen/distance_45dp"
            android:layout_marginLeft="@dimen/distance_5dp"
            android:layout_marginRight="@dimen/distance_5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_circle_cornrer_blue"
            android:gravity="center"
            android:text="@string/meeting_my_check"
            android:textColor="@color/light_blue_new"
            android:textSize="@dimen/font_size_18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_meeting_my_participation"
            android:layout_width="match_parent"
            android:layout_height="@dimen/distance_45dp"
            android:layout_marginLeft="@dimen/distance_5dp"
            android:layout_marginRight="@dimen/distance_10dp"
            android:layout_weight="1"
            android:background="@drawable/shape_circle_cornrer_blue"
            android:gravity="center"
            android:text="@string/meeting_my_participation"
            android:textColor="@color/light_blue_new"
            android:textSize="@dimen/font_size_18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_45dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/class_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/width_2dp"
            android:layout_marginLeft="@dimen/distance_6dp"
            android:layout_marginTop="@dimen/width_2dp"
            android:text="@string/meeting_small_title"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/textsize_16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/distance_6dp"
            android:src="@mipmap/class_right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginLeft="@dimen/distance_10dp"
        android:layout_marginRight="@dimen/distance_10dp"
        android:layout_marginTop="@dimen/distance_15dp"
        android:background="@color/grey_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_apply_meeting_room"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/hy_sq" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distance_10dp"
                android:text="@string/meeting_apply_meeting_room"
                android:textColor="@color/color_12203e"
                android:textSize="@dimen/textsize_16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_publish_meeting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/hy_fb" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distance_10dp"
                android:text="@string/meeting_publish_meeting"
                android:textColor="@color/color_12203e"
                android:textSize="@dimen/textsize_16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_meeting_sign_meeting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/hy_qd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distance_10dp"
                android:text="@string/meeting_sign_meeting"
                android:textColor="@color/color_12203e"
                android:textSize="@dimen/textsize_16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/approval_become_a_full_member"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/sp_zz" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distance_10dp"
                android:text="@string/approval_become_a_full_member"
                android:textColor="@color/color_12203e"
                android:textSize="@dimen/textsize_16sp" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>